# STM32F7-FreeRTOS-Blinky

./: .clang_complete  CMakeLists.txt  README.md
Drivers/: CMakeLists.txt
FreeRTOS/: CMakeLists.txt
FreeRTOS/Include/: FreeRTOSConfig.h
User/Include/: main.h
User/Source/: main.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c
